CV_automation/db_check.txt
  File "<string>", line 1
    import asyncio, os; from dotenv import load_dotenv, find_dotenv; from supabase import create_async_client; load_dotenv(find_dotenv()); async def run(): url=os.getenv('SUPABASE_URL'); key=os.getenv('SUPABASE_SERVICE_KEY'); sb=await create_async_client(url, key); res=await sb.table('job_descriptions').select('id,company,status').order('created_at', desc=True).limit(5).execute(); print(res.data); asyncio.run(run())
                                                                                                                                           ^^^^^
SyntaxError: invalid syntax
